[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/menus/gameover/GameOverMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui-bits/SelectSquare.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/theme.tres" type="Theme" id=4]

[sub_resource type="Animation" id=1]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Retry:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 0.7 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Options/Quit:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 0.7 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Options/MainMenu:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 0.7 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Titles:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="GameOverMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeAll = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Background Color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.666667, 0.666667, 0.666667, 0.0392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titles" type="HBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -32.5
margin_right = 145.0
margin_bottom = 32.5
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game" type="Label" parent="Titles"]
margin_right = 150.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="over" type="Label" parent="Titles"]
margin_left = 170.0
margin_right = 290.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectSquare" parent="." instance=ExtResource( 3 )]
visible = false
options_path = NodePath("../Options")
auto_show = false

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = 70.5
margin_right = 72.0
margin_bottom = 145.5
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Label" parent="Options"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 144.0
margin_bottom = 15.0
text = "replay"
align = 1
valign = 1

[node name="Quit" type="Label" parent="Options"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 30.0
margin_right = 144.0
margin_bottom = 45.0
text = "quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Label" parent="Options"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 60.0
margin_right = 144.0
margin_bottom = 75.0
text = "back to main menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="selected" from="SelectSquare" to="." method="_on_SelectSquare_selected"]
